# foundry_ethers_struct_error

./: Cargo.toml
src/: main.rs
